--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Is it time already to ruin my day?</h1>
-<p>Oh Spongebob, WHY???.</p>
+<h1>2020-02-02</h1>
+<p>Who ruined my day today?</p>
 </body>
 </html
